feat(kubectl_proxyauth): changed auth to allow it to be kubectl compatible and add CliCtx creation
